Logis, Markup, and Styles successfully accomplished, aided by Attr. Ref. https://www.gosquared.com/blog/visitors-currently-on-this-page

--- a/style.css
+++ b/style.css
@@ -7540,6 +7540,19 @@ section:nth-child(even) {
     text-decoration: none;
 }
 
+/* Displays Page's Visitations.  Attr. https://www.gosquared.com/blog/visitors-currently-on-this-page */
+#online-now {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /* start with the text hidden */
+  opacity: 0;
+  /* add a transition so it'll fade in nicely */
+  transition: opacity 0.2s ease-out;
+}
+
+#online-now.visible {
+  opacity: 1;
+}
+
 /*================================================== Non-Global Styles. ==================================================*/
 /*====================================== About Me Section. ======================================*/
 /* My Signature Header <h2> */
